[package]
name = "running"
version = "0.1.0"
authors = ["shivanandvp <shivanandvp@rebornos.org>"]
edition = "2018"
description = "A library for running tasks (functions/closures or operating system commands)."
readme = "README.md"
license = "MPL-2.0"
repository = "https://gitlab.com/shivanandvp/running-rs.git"
keywords = ["commands", "execute", "batch", "jobs", "tasks"] 

[dependencies]
log = "0.4.11"
async-trait = "0.1.41"
tokio = {version = "0.3.1", features = ["full"]}
snafu = "0.6.10"
serde = {version = "1.0.127", optional = true, features = ["derive"]}

[feature]
serde_support = ["serde"]

[dev-dependencies]
fern = {version = "0.6.0", features = ["colored"], optional = false}
chrono = {version = "0.4.15", optional = false}

[badges]
maintenance = { status = "experimental" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

